# triad-ptq

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  REPORT.md  STATUS.md  pyproject.toml
docs/: v2-design.md
docs/decisions/: 001-truncated-eigh-rank-deficiency.md  002-exynos-2500-xclipse-gpu.md  003-phase1-mlc-build-deferred.md  004-mlc-bundle-schema-mismatch.md  005-prebuilt-mlcchat-cannot-load-triad.md  006-decode-gap-root-cause.md  007-ppl-improvements-v2.md  010-gptaq-phase-2.md  (+9 more)
experiments/: 01_calibrate_smollm.py  10_compare_all_models.py  12_tinyllama_triad_lowmem.py  13_tinyllama_phase3.py  14_export_mlc.py  15_exynos_compare.py  16_fp16_tinyllama_baseline.py  16_tinyllama_phase3_v2.py  17_export_mlc_v2.py  18_gptaq_smoke_smollm.py  19_r1_rotate_tinyllama.py  20_compare_cnns.py  30_make_plots.py  30_session3_plots.py  B1_current_config.md  device_profile.txt  profile_cholesky.py
results/: baseline_tinyllama_q4f16_1_exynos.json  exynos_comparison.md  fp16_tinyllama_m1.json  phase4_export_summary.json  phase4_r1_rotation_summary.json  phase4_v2_export_summary.json  triad_tinyllama_int4_exynos.json  triad_tinyllama_int4_m1.json  triad_tinyllama_int4_v2_m1.json
tests/: test_allocator.py  test_clip_search.py  test_endtoend_linear.py  test_generation_smoke.py  test_gptaq_asym.py  test_grid_closed_form.py  test_memory_streaming.py  test_mlc_export.py  test_mlc_export_layout.py  test_r1_rotation.py  test_super_weight_index_bounds.py
tools/: bench_android.sh  build_probes.sh  verify_kernel_identity.sh
triad_ptq/: __init__.py  api.py  compile.py
(+95 files in other folders)
