[project]
name = "triad-ptq"
version = "0.1.0"
description = "TRIAD-PTQ: Trace-Router-Interaction-Aware Decomposition for post-training quantization of edge-class neural networks"
authors = [{ name = "Artem Katolikov" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "datasets>=2.20",
    "accelerate>=0.34",
    "tokenizers>=0.20",
    "torchvision>=0.19",
    "timm>=1.0",
    "numpy>=1.26,<2.3",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "tqdm>=4.66",
    "rich>=13.7",
    "safetensors>=0.4",
    "huggingface-hub>=0.25",
    "pillow>=10.4",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-xdist>=3.6"]
eval = ["lm-eval>=0.4.5"]
mlx = ["mlx>=0.18", "mlx-lm>=0.18"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["triad_ptq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
]
